--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ layout: post
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<title>My Colorful Blog</title>
+	<title>GMFBI</title>
 </head>
 <body>
 	<header>
-		<h1>Welcome to My Colorful Blog!</h1>
+		<h1>Welcome to the Genetic Models From Basal Insects!</h1>
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
@@ -21,13 +21,13 @@ layout: post
 	</header>
 	<main>
 		<article>
-			<h2>My First Blog Post</h2>
+			<h2>Background</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo et nulla euismod, id convallis dolor congue. Aenean consequat ipsum at lectus tincidunt consectetur. Integer euismod urna quis odio posuere, ac vulputate lorem dictum. Suspendisse rutrum magna eget libero ornare dapibus.</p>
 			<p>Ut ut mauris id purus congue congue. Donec in lectus at lacus vulputate commodo sed ut sem. Proin et facilisis quam. Duis euismod eros non neque blandit, ac consequat leo dapibus. Phasellus accumsan nulla ac augue iaculis, eu commodo turpis bibendum.</p>
 		</article>
 	</main>
 	<footer>
-		<p>&copy; 2023 My Colorful Blog</p>
+		<p>&copy; 2023 GMFBI</p>
 	</footer>
 </body>
 </html>
