--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ layout: post
 	<main>
 		<article>
 			<h2>Background</h2>
+			<p>Insects have been a key model for various scientific discoveries. Basal insects, the Ametabolan and the Hemimetabolan have been critical to fields ranging from behavioural, neurological, robotics, and evolutionary biology. However, only two of the 19 major basal insect orders contain model laboratory species with established functional genetic tools. Here, we have selected some of the insects from Ametabola and Hemimetabola group and try to document the existing genetic resources and toolkits available and present the gaps which needs to address.</p>
+
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo et nulla euismod, id convallis dolor congue. Aenean consequat ipsum at lectus tincidunt consectetur. Integer euismod urna quis odio posuere, ac vulputate lorem dictum. Suspendisse rutrum magna eget libero ornare dapibus.</p>
 			<p>Ut ut mauris id purus congue congue. Donec in lectus at lacus vulputate commodo sed ut sem. Proin et facilisis quam. Duis euismod eros non neque blandit, ac consequat leo dapibus. Phasellus accumsan nulla ac augue iaculis, eu commodo turpis bibendum.</p>
 		</article>
