--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>GMFBI.v2</title>
+  <title>GMFBI</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <!-- Logo and navigation menu -->
   </header>
-  <section class="hero">
+  <section class="GMFBI">
     <!-- Hero image and title -->
   </section>
   <section class="featured">
